# variant

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: main.cpp  variant.h
